Added Effects: Chorus, Reverb. Fixed search choose audio Files and Sort Order.

--- a/app/src/main/res/layout/fragment_effects_host.xml
+++ b/app/src/main/res/layout/fragment_effects_host.xml
@@ -7,42 +7,28 @@
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:background="@drawable/background_fragment">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <ScrollView
+            <FrameLayout
                 android:layout_width="match_parent"
+                android:id="@+id/effectsFragment"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/effectsFragment">
-
-                </FrameLayout>
-            </ScrollView>
+            </FrameLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:text="@android:string/cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/bCancel"
-                    android:layout_weight="1"
-                    android:background="@drawable/background_button"
-                    android:textColor="@color/colorAccent"
-                    android:layout_margin="5dp"/>
+                android:layout_height="wrap_content"
+                >
 
                 <Button
                     android:text="@android:string/ok"
@@ -51,7 +37,17 @@
                     android:id="@+id/bOk"
                     android:layout_weight="1"
                     android:background="@drawable/background_button"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/colorForeground"
+                    android:layout_margin="5dp"/>
+
+                <Button
+                    android:text="@android:string/cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/bCancel"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_button"
+                    android:textColor="@color/colorForeground"
                     android:layout_margin="5dp"/>
 
             </LinearLayout>
