Tinkering with waveform view. Tracks can be removed. And a lot of minor fixes.

--- a/app/src/main/res/layout/audio_track_head.xml
+++ b/app/src/main/res/layout/audio_track_head.xml
@@ -44,7 +44,7 @@
 
         <ImageButton
             app:srcCompat="@android:drawable/ic_delete"
-            android:id="@+id/imageButton"
+            android:id="@+id/removeButton"
             android:background="@null"
             android:foregroundGravity="center"
             android:layout_gravity="center"
