--- a/app/src/main/res/layout/fragment_choruse_efect.xml
+++ b/app/src/main/res/layout/fragment_choruse_efect.xml
@@ -18,7 +18,7 @@
             <!-- ///////////////////start choruse/////////////////////-->
 
             <TextView
-                android:text="@string/effect_choruse"
+                android:text="@string/effect_chorus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
