--- a/app/src/main/res/layout/item_effect.xml
+++ b/app/src/main/res/layout/item_effect.xml
@@ -17,8 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tv_titleEffect"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:textColor="@color/colorForeground"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:padding="1dp"/>
     </LinearLayout>
 </FrameLayout>
