--- a/app/src/main/res/menu/project.xml
+++ b/app/src/main/res/menu/project.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="always"
+        android:title="@string/action_import"
+        app:showAsAction="always|withText"
         android:icon="@drawable/ic_music_note"/>
 </menu>
