--- a/app/src/main/res/layout/fragment_flanger_effect.xml
+++ b/app/src/main/res/layout/fragment_flanger_effect.xml
@@ -30,14 +30,14 @@
                 android:layout_marginBottom="10dp"/>
 
             <TextView
-                android:text="@string/fwet_dry_mix"
+                android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:text="@string/fwet_dry_mix"
                 android:textColor="@color/colorForeground"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp"/>
 
             <com.sunflower.catchtherainbow.Views.Helpful.DetailedSeekBar
                 android:layout_width="match_parent"
