Created a very convenient audio importer which decodes any number of audio files and sends results. This process is visualized by notification. All of the decoded audio files are split into little chunks (~2 mb each). Working with these would be quite fast.

--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -42,12 +42,12 @@
                 android:visibility="gone"/>
 
             <SearchView
+                android:id="@+id/searchViewAudio"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_textview"
-                android:id="@+id/searchViewAudio"
                 android:layout_weight="1"
-                >
+                android:background="@drawable/background_textview"
+                android:imeOptions="flagNoExtractUi">
 
             </SearchView>
 
