--- a/app/src/main/res/layout/item_effect.xml
+++ b/app/src/main/res/layout/item_effect.xml
@@ -6,20 +6,20 @@
               android:id="@+id/effect_layout">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
+        android:orientation="vertical"
         android:padding="8dp">
 
         <TextView
-            android:text="TextView"
+            android:id="@+id/tv_titleEffect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_titleEffect"
-            android:textSize="24sp"
-            android:textColor="@color/colorForeground"
+            android:padding="1dp"
+            android:text="TextView"
             android:textAlignment="center"
-            android:padding="1dp"/>
+            android:textColor="@color/colorForeground"
+            android:textSize="24sp"/>
     </LinearLayout>
 </FrameLayout>
