--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -98,21 +98,21 @@
             android:layout_marginTop="1dp">
 
             <Button
-                android:text="@string/conformation"
-                android:layout_width="wrap_content"
-                android:onClick="onClick"
                 android:id="@+id/bOk"
-                android:background="@drawable/background_button"
-                android:gravity="center"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
+                android:layout_weight="1"
+                android:background="@drawable/background_button"
+                android:gravity="center"
+                android:onClick="onClick"
+                android:text="@string/conformation"
                 android:textColor="@color/colorForeground"
-                android:textSize="16sp"
-                android:layout_height="wrap_content"/>
+                android:textSize="16sp"/>
 
             <Button
-                android:text="@string/deny"
+                android:text="@string/cancel"
                 android:layout_width="wrap_content"
                 android:onClick="onClick"
                 android:id="@+id/bCancel"
