--- a/app/src/main/res/layout/fragment_main_area.xml
+++ b/app/src/main/res/layout/fragment_main_area.xml
@@ -1,23 +1,24 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/main_area"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.sunflower.catchtherainbow.Views.Editing.MainAreaFragment">
 
     <ScrollView
+        android:id="@+id/verticalScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/verticalScrollView">
+        android:layout_height="match_parent">
 
         <TableLayout
+            android:id="@+id/tracks_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/tracks_layout"
             android:divider="@android:drawable/divider_horizontal_bright"
-            android:stretchColumns="1"
-            android:showDividers="middle">
+            android:orientation="vertical"
+            android:showDividers="middle"
+            android:stretchColumns="1">
 
         </TableLayout>
     </ScrollView>
