--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle" >
-
-    <corners android:radius="3dp" />
-    <solid android:color="@color/backgroundButton"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/strokeView"/>
-    <padding
-        android:bottom="15dp"
-        android:left="15dp"
-        android:right="15dp"
-        android:top="15dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+<item android:state_pressed="true" android:drawable="@drawable/button_selected"/>
+<item android:state_focused="true" android:drawable="@drawable/button_selected"/>
+<item android:drawable="@drawable/button_normal"/>
+</selector>
