--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -22,7 +22,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_project"
-        app:menu="@menu/activity_project_drawer"
-        />
+        app:menu="@menu/activity_project_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
