--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -20,8 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/colorPrimary"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_project"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/colorForeground"
+        app:itemTextColor="@color/colorForeground"
         app:menu="@menu/activity_project_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
