--- a/app/src/main/res/layout/audio_track_head.xml
+++ b/app/src/main/res/layout/audio_track_head.xml
@@ -31,16 +31,16 @@
         android:layout_toStartOf="@+id/horizontal_thumb"
         android:layout_above="@+id/vertical_thumb">
 
-        <com.sunflower.viewlibrary.main.AnimatedSwitch.MaterialAnimatedSwitch
+        <Switch
+            android:id="@+id/mute_track"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:base_release_color="@color/colorPrimaryDark"
+            android:layout_gravity="center"/>
+            <!--app:ball_release_color="@color/colorPrimary"
             app:base_press_color="@color/colorForegroundSecond"
-            app:ball_release_color="@color/colorPrimary"
-            app:icon_release="@drawable/track_sound_disabled"
+            app:base_release_color="@color/colorPrimaryDark"
             app:icon_press="@drawable/track_sound_enabled"
-            />
+            app:icon_release="@drawable/track_sound_disabled">-->
 
         <ImageButton
             app:srcCompat="@android:drawable/ic_delete"
@@ -64,20 +64,22 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:text="@string/new_audio_stack"
-                android:id="@+id/editText"
+                android:id="@+id/track_name_edit"
                 android:textColor="@color/colorForeground"
                 android:layout_gravity="center_vertical"
                 android:imeOptions="actionDone|flagNoFullscreen"
                 android:textSize="@dimen/text_normal"/>
+
             <com.sunflower.catchtherainbow.Views.Helpful.SuperSeekBar
+                android:id="@+id/gain_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:max="100"
                 android:padding="0dp"
                 android:paddingEnd="9dp"
                 android:paddingStart="9dp"
-                android:theme="@style/SuperSeekBarStyle"
                 android:progress="50"
-                android:max="100"/>
+                android:theme="@style/SuperSeekBarStyle"/>
 
         </LinearLayout>
 
@@ -89,7 +91,7 @@
             android:layout_width="45dp">
 
             <ToggleButton
-                android:id="@+id/toggleButton"
+                android:id="@+id/solo_toggle"
                 android:text="@string/solo"
                 android:background="@drawable/toggle_button_selector"
                 android:textOff="@string/solo"
