--- a/app/src/main/res/layout/effects_host_fragment.xml
+++ b/app/src/main/res/layout/effects_host_fragment.xml
@@ -31,24 +31,24 @@
                 >
 
                 <Button
-                    android:text="@android:string/ok"
+                    android:id="@+id/bOk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/bOk"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/background_button"
-                    android:textColor="@color/colorForeground"
-                    android:layout_margin="5dp"/>
+                    android:text="@string/conformation"
+                    android:textColor="@color/colorForeground"/>
 
                 <Button
-                    android:text="@android:string/cancel"
+                    android:id="@+id/bCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/bCancel"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/background_button"
-                    android:textColor="@color/colorForeground"
-                    android:layout_margin="5dp"/>
+                    android:text="@string/cancel"
+                    android:textColor="@color/colorForeground"/>
 
             </LinearLayout>
         </LinearLayout>
