--- a/app/src/main/res/layout/nav_header_project.xml
+++ b/app/src/main/res/layout/nav_header_project.xml
@@ -26,9 +26,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:shadowColor="@android:color/black"
+        android:shadowRadius="2"
         android:text="Catch the Rainbow"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/textView"
