--- a/app/src/main/res/layout/effect_distortion_fragment.xml
+++ b/app/src/main/res/layout/effect_distortion_fragment.xml
@@ -1,13 +1,147 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.sunflower.catchtherainbow.Views.Effects.DistortionEffectFragment">
+                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                 xmlns:tools="http://schemas.android.com/tools"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 tools:context="com.sunflower.catchtherainbow.Views.Effects.DistortionEffectFragment"
+                 android:background="@color/backgroundButton">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        <!-- TODO: Update blank fragment layout -->
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</FrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/backgroundListView"
+                    android:text="@string/effect_distortion"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorForeground"
+                    android:textSize="18sp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/fedge"
+                        android:textColor="@color/colorForeground"
+                        android:textSize="18sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
+
+                        <com.sunflower.catchtherainbow.Views.Helpful.CircularSeekBar
+                            android:id="@+id/fEdge"
+                            android:layout_width="wrap_content"
+                            android:layout_height="125dp"
+                            android:layout_gravity="center"
+                            app:max="100"
+                            app:progress="15"/>
+                    </FrameLayout>
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/fgain"
+                    android:textColor="@color/colorForeground"
+                    android:textSize="18sp"/>
+
+                <com.sunflower.catchtherainbow.Views.Helpful.DetailedSeekBar
+                    android:id="@+id/fGain"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:current="8000"
+                    app:max="8000"
+                    app:min="100"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/fpre_low_pass_cut_off"
+                    android:textColor="@color/colorForeground"
+                    android:textSize="18sp"/>
+
+                <com.sunflower.catchtherainbow.Views.Helpful.DetailedSeekBar
+                    android:id="@+id/fPreLowpassCutoff"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:current="8000"
+                    app:max="8000"
+                    app:min="100"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/fpost_eq_center_frequency"
+                    android:textColor="@color/colorForeground"
+                    android:textSize="18sp"/>
+
+                <com.sunflower.catchtherainbow.Views.Helpful.DetailedSeekBar
+                    android:id="@+id/fPostEQCenterFrequency"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:current="2400"
+                    app:max="8000"
+                    app:min="100"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/fpost_eq_band_width"
+                    android:textColor="@color/colorForeground"
+                    android:textSize="18sp"/>
+
+                <com.sunflower.catchtherainbow.Views.Helpful.DetailedSeekBar
+                    android:id="@+id/fPostEQBandwidth"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:current="2400"
+                    app:max="8000"
+                    app:min="100"/>
+
+            </LinearLayout>
+        </ScrollView>
+
+    </FrameLayout>
